# flight-simulator

./: .gitignore  BBA_GUI.py  BBA_GUI.ui  BBA_GUI_ui.py  BBA_QM_GUI.py  BPM_weights.py  CLEAR_Line.ipynb  ChangeBpmsWeights_BBA.py  ChangeBpmsWeights_BBA.ui  ChiSquaredPopup_BBA.py  ComputeResponeMatrix.py  ComputeResponseMatrix.py  ComputeResponseMatrix_GUI.py  ComputeResponseMatrix_GUI.ui  ComputeResponseMatrix_rnd_GUI.py  Computre_Response-Matrix_diff.py  DFS_Correction.py  DFS_WFS_Correction.py  DFS_WFS_Correction_BBA.py  DatasetGenerator_EM_GUI.py  DatasetGenerator_ModelTrainer_EM_GUI.py  EmittMeas_GUI.py  EmittMeas_GUI.ui  EmittMeas_GUI_ui.py  Emitt_Meas_Simulation.py  Emitt_Meas_Simulation_ATF2.py  Emitt_Meas_Simulation_ATF2_v0.py  Emittance_Measurement.ipynb  Emittance_Measurement_GUI.py  Ext_ATF2.ipynb  InterfaceATF2.py  InterfaceATF2_DR.py  InterfaceATF2_Ext.py  InterfaceATF2_Ext_RFTrack.py  InterfaceATF2_Linac.py  InterfaceCLEAR_RFTrack.py  LogConsole_BBA.py  Machine.py  MainPanel.py  MainPanel.ui  (+31 more)
Backend/: DFS_WFS_Correction_BBA.py  EmittanceMeasurement.py  LinearResponse_EM.py  LogConsole.py  LogConsole_BBA.py  MeasureOptics.py  MeasureTrajectoryResponse.py  Optimization_EM.py  PhaseSpaceGraphs_EM.py  QuadrupoleScan_EM.py  RMS_Plots_BBA.py  Response.py  ResponseMatrix_DFS_WFS.py  SaveOrLoad.py  SelectInterface.py  State.py  TestOrbits_BBA.py
Data/: dfs_response.npz  wfs_response.npz
Emittance Measurement/: EmittMeas_GUI.py  Emitt_Meas_Simulation_ATF2.py  Emitt_Meas_Simulation_ATF2_v0.py
Ext_ATF2/: README.txt
Helper scripts and tests/: State_table.md  (+4 more)
(+942 files in other folders)
