[project]
name = "flight-simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "wmalek",email = "wiktoria.malek@cern.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyqt6 (>=6.10.2,<7.0.0)",
    "rf-track (>=2.5.5,<3.0.0)",
    "pyepics>=1.0,<4.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false